--- a/遇到的问题.md
+++ b/遇到的问题.md
@@ -1,4 +1,30 @@
-更新
+npm   包发布
+segmentfault// https://segmentfault.com/a/1190000006250554
+
+掘金// https://juejin.im/post/5971aa866fb9a06bb5406c94
+
+使用 cnpm 的注意报错：
+no_perms Private mode enable, only admin can publish this module
+设置回原本的就可以了
+npm config set registry http://registry.npmjs.org 
+发布完成之后,如果还想回到之前的cnpm,使用下面的命令
+npm config set registry https://registry.npm.taobao.org
+
+### 第五章 
+singer 类的封装 
+目录数据结构的处理
+Q:
+listview -> scroll.vue  
+右侧的快速入口 没有生效， 执行到scrollToElement 
+
+
+###  第四章补充
+recommend 请求单独封装
+scroll 组件 
+slider 轮播组件
+express 请求代理 referer host
+
+注意点  数据获取先后，dom渲染时机，标识符选择，
 
 ### D 00:46
 
