--- a/遇到的问题.md
+++ b/遇到的问题.md
@@ -10,13 +10,16 @@ npm config set registry http://registry.npmjs.org
 发布完成之后,如果还想回到之前的cnpm,使用下面的命令
 npm config set registry https://registry.npm.taobao.org
 
-### 第五章 
-singer 类的封装 
+### 第五章
+Note:
+左右联动，-> 获取到实时滚动的位置 -> 计算在列表的哪个区间索引 ->
+watch 监听scroll派发出来scrollY值得变化，根据scrollY值计算currentIndex, 再与anchor索引映射
+singer 类的封装 方便复用
 目录数据结构的处理
 Q:
 listview -> scroll.vue  
-右侧的快速入口 没有生效， 执行到scrollToElement 
-
+右侧的快速入口 没有生效， 执行到scrollToElement  ->还未找到原因
+A 原因为touchStart中 索引值为NAN  -> dom.js中获取自定义data-prop 未return！！！
 
 ###  第四章补充
 recommend 请求单独封装
