vuex 基本语法糖基本的使用  songs数据列表 songs类的处理

--- a/遇到的问题.md
+++ b/遇到的问题.md
@@ -10,6 +10,12 @@ npm config set registry http://registry.npmjs.org
 发布完成之后,如果还想回到之前的cnpm,使用下面的命令
 npm config set registry https://registry.npm.taobao.org
 
+
+### Tips
+基础组件与业务组件的区分  base component
+
+
+
 ### 第五章
 Note:
 左右联动，-> 获取到实时滚动的位置 -> 计算在列表的哪个区间索引 ->
