--- a/遇到的问题.md
+++ b/遇到的问题.md
@@ -14,7 +14,14 @@ npm config set registry https://registry.npm.taobao.org
 ### Tips
 基础组件与业务组件的区分  base component
 
-
+### 第六章
+music-list  组件
+song-list 组件
+prefixStyle js的逻辑
+通过scroll组件监听better-scroll返回的移动值做交互的处理
+歌手图像，通过padding-top百分比，用背景图的形式设置占位，z-index的处理
+歌手图像通过css属性transform-origin: top; 与scroll组件返回的滚动值 除以 图片区域的高度获取scale值
+最小偏移值的取值minTranslateY = -this.imageHeight + RESERVED_HEIGHT
 
 ### 第五章
 ##### Note:
